# noicevoice

./: .gitignore  .gitmodules  Cargo.toml  README.md
app/: Cargo.toml  index.html  style.scss
app/src/: main.rs  voice.rs
pitch/: Cargo.toml
pitch/benches/: benches.rs
pitch/examples/: chart.rs  voice.rs
pitch/src/: fft.rs  frequencer.rs  lib.rs  notes.rs  resynth.rs  splat.rs
