[package]
name = "app"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.17.4"
pitch = { path = "../pitch" }
pasts = "0.6"
wavy = "0.7.1"
fon = "0.3"
plotters = "0.3.0"
wasm-bindgen-futures = "0.4.19"
wasm-bindgen = "0.2.69"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.46"
default-features = false
features = [
    "console",
    "Document",
    "HtmlInputElement",
    "Window",
]
