[package]
name = "pitch"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
num-complex = "0.3.1"

[dev-dependencies]
pasts = "0.6"
wavy = "0.6.0"
fon = "0.2"
rand = "0.7.3"
float-cmp = "0.8.0"
criterion = "0.3.3"

[[bench]]
name = "benches"
harness = false

[[example]]
name = "voice"
path = "examples/voice.rs"